2010-06-04  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (%read-from-string): use gp_read_str
	instead of the obsolete readseq; use DEF-CALL-OUT instead of
	PARI-CALL-OUT to avoid shadowing the CL function
	(pari-reader): gp_read_str takes care of whitespace

2010-06-03  Sam Steingold  <sds@gnu.org>

	init the PARI internal data structures properly,
	enabling nice error messages to the screen
	* modules/pari/configure.in: do not check for killallfiles, freeall;
	check for pari_close
	* modules/pari/cpari.c (clispErrDie): revert to trivial error message
	(clisp_exception_handler): remove
	(init_for_clisp): pass INIT_DFTm to pari_init_opts; do not set
	GP_DATA (done by pari_init_opts) and default_exception_handler
	(fini_for_clisp): remove
	* modules/pari/pari.lisp (pari-fini): call pari_close(),
	also call pari_close() in :FINI

2010-06-03  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (require): fix the 2010-05-25 patch: do not lock
	*SYSTEM-PACKAGE-LIST* if "SYSTEM" is not locked, i.e., CLISP was
	started with "-d" and thus locking is not desired

2010-06-03  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (convert-to-pari): use symbols instead of
	numbers as the typecode argument in pari-cgetg invocations
	(convert-from-pari-vector): replaces convert-from-pari-VEC and
	convert-from-pari-COL
	(convert-from-pari): use it instead of them
	(convert-to-pari@vector): simplify
	(convert-from-pari-REAL): treat empty mantissa as 0 (no signed 0
	in CLISP)
	(convert-from-pari-SER): fix
	(pari-object): remove the spurious "nil" slot
	(pari-real-qf): fix definition (4 slots, not 3)

2010-06-02  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (pari-typecode): export names
	(variable-order): add (call reorder)
	(euler): remove DEFINE-SYMBOL-MACRO
	(pari-real-precision): re-add function, setf, and symbol-macro
	(pari-real-precision-words): add a function on top of a variable
	(pari-call-out-prec): prec is specified in number of decimals
